# cppunitTest

./: CMakeLists.txt  Jenkinsfile  README.md
src/: Aritmetic.cpp  Aritmetic.h  CMakeLists.txt  main.cpp
test/: AritmeticTests.cpp  AritmeticTests.h  CMakeLists.txt  main.cpp
